[fix]解决分页组件jumper可以删除为空的问题

--- a/src/components/Drawer/style/drawer.less
+++ b/src/components/Drawer/style/drawer.less
@@ -1,6 +1,7 @@
 .yc-drawer-wrapper {
   inset: 0 0 0 0;
   position: fixed;
+  overflow: hidden;
 
   .yc-drawer-mask {
     position: absolute;
