--- a/src/components/Modal/style/modal.less
+++ b/src/components/Modal/style/modal.less
@@ -1,6 +1,7 @@
 .yc-modal-container {
   inset: 0 0 0 0;
   position: fixed;
+  overflow: hidden;
   .yc-modal-mask {
     position: absolute;
     inset: 0 0 0 0;
